--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
     background-color: aquamarine;
     color: azure;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Epunda Slab", serif;
 }
