--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
 body{
     background-color: aquamarine;
-    color: azure;
+    color: rgb(205, 123, 8);
     font-family: "Epunda Slab", serif;
+    margin: 0px;
 }
+
+header{
+    font-size: 50px;
+    border: double  5px orange;
+}
+
+h1{
+    font-size: 30px;
+}
+
+p{
+    font-size: 20px;
+}
+
+
+
