--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body{
 
 header{
     font-size: 50px;
-    border: double  5px orange;
+    border-bottom: double  5px orange; 
+   /* margin: 30px;*/
+   padding: 30px;
 }
 
 h1{
