--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@ body{
 
 header{
     font-size: 50px;
+    text-align: center;
     border-bottom: double  5px orange; 
    /* margin: 30px;*/
    padding: 30px;
+  color: rgb(160, 30, 30);
 }
 
 h1{
@@ -19,6 +21,7 @@ h1{
 p{
     font-size: 20px;
 }
+
 
 
 
