--- a/style.css
+++ b/style.css
@@ -22,6 +22,15 @@ p{
     font-size: 20px;
 }
 
+section{
+background-color: rgb(20, 209, 209);
+padding-bottom: 80px;
+padding-top: 80px;
+display: flex;
+justify-content: center;
+
+}
+
 
 
 
